--- a/packages/vix-yaml/package.json
+++ b/packages/vix-yaml/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "types": "src/index.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@rollup/pluginutils": "^3.1.0",
     "@types/js-yaml": "^4.0.4",
