--- a/packages/vix-utils/package.json
+++ b/packages/vix-utils/package.json
@@ -23,6 +23,9 @@
     },
     "./package.json": "./package.json"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@tekclaw/scaffold": "^1.0.1",
     "chalk": "^4.1.2",
