--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/node": "^17.0.20",
     "@types/source-map-support": "^0.5.4",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "@tekclaw/scaffold": "*"
   }
 }
