--- a/packages/vix-core/tsconfig.json
+++ b/packages/vix-core/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../scaffold/tsconfig.node.json",
+  "extends": "@tekclaw/scaffold/tsconfig.node.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
