--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekclaw/vix-core",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "lightning fast builds and dev tool",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -51,9 +51,9 @@
     "vite-plugin-inspect": "^0.7.14"
   },
   "devDependencies": {
+    "@tekclaw/scaffold": "*",
     "@types/node": "^17.0.20",
     "@types/source-map-support": "^0.5.4",
-    "typescript": "^4.8.3",
-    "@tekclaw/scaffold": "*"
+    "typescript": "^4.8.3"
   }
 }
