--- a/packages/vix-core/tsconfig.json
+++ b/packages/vix-core/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "types": ["node"],
+    "types": ["node", "vite/client"],
     "typeRoots": ["node_modules/@types"],
     "baseUrl": "./",
     "paths": {
