--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -36,7 +36,7 @@
     "cac": "^6.7.14",
     "chalk": "^4.1.2",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.15.7",
+    "esbuild": "^0.17.8",
     "esbuild-plugin-path-alias": "^1.0.7",
     "execa": "^6.1.0",
     "fs-extra": "^10.1.0",
@@ -48,7 +48,10 @@
     "source-map-support": "^0.5.21",
     "tosource": "^2.0.0-alpha.3",
     "vite": "^4.1.1",
-    "vite-plugin-inspect": "^0.7.14"
+    "vite-plugin-inspect": "^0.7.14",
+    "vite-plugin-commonjs": "^0.6.1",
+    "vite-plugin-dynamic-import": "^1.2.3",
+    "vite-plugin-utils": "^0.3.3"
   },
   "devDependencies": {
     "@tekclaw/scaffold": "*",
