--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "build": "tsc --build --force",
     "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
     "setup": "node dist/install",
     "prepublishOnly": "npm run build"
@@ -31,7 +32,7 @@
     "@rollup/plugin-graphql": "^1.1.0",
     "@rollup/plugin-yaml": "^3.1.0",
     "@types/fs-extra": "^9.0.13",
-    "@vitejs/plugin-react": "^3.0.1",
+    "@vitejs/plugin-react": "^3.1.0",
     "builtin-modules": "^3.2.0",
     "cac": "^6.7.14",
     "chalk": "^4.1.2",
@@ -56,7 +57,11 @@
   "devDependencies": {
     "@tekclaw/scaffold": "*",
     "@types/node": "^17.0.20",
+    "@vitest/coverage-c8": "0.28.4",
     "@types/source-map-support": "^0.5.4",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "c8": "7.12.0",
+    "unplugin-auto-import": "0.13.0",
+    "vitest": "0.28.4"
   }
 }
