--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -56,11 +56,12 @@
   },
   "devDependencies": {
     "@tekclaw/scaffold": "*",
+    "@types/jest": "^29.4.0",
     "@types/node": "^17.0.20",
-    "@vitest/coverage-c8": "0.28.4",
     "@types/source-map-support": "^0.5.4",
-    "typescript": "^4.8.3",
+    "@vitest/coverage-c8": "0.28.4",
     "c8": "7.12.0",
+    "typescript": "^4.8.3",
     "unplugin-auto-import": "0.13.0",
     "vitest": "0.28.4"
   }
