--- a/packages/vix-core/tsconfig.json
+++ b/packages/vix-core/tsconfig.json
@@ -3,14 +3,14 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "types": ["node", "vite/client"],
+    "types": ["node", "vite/client", "vitest/globals"],
     "typeRoots": ["node_modules/@types"],
     "baseUrl": "./",
     "paths": {
       "*": ["*", "./src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "auto-imports.d.ts"],
   "exclude": [
     "node_modules/**",
     "dist",
