--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,13 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "1.0.12"
+  "version": "1.0.12",
+  "npmClient": "npm",
+  "useWorkspaces": true,
+  "npmClientArgs": ["--ignore-engines"],
+  "command": {
+    "version": {
+      "forcePublish": true,
+      "exact": true,
+      "message": "chore(versions): 😊 publish %s"
+    }
+  }
 }
