--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -12,6 +12,9 @@
   "files": [
     "*"
   ],
+  "dependencies": {
+    "@types/node": "latest"
+  },
   "peerDependencies": {
     "@microsoft/eslint-plugin-sdl": "^0.1.7",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
