--- a/packages/scaffold/tsconfig.node.json
+++ b/packages/scaffold/tsconfig.node.json
@@ -20,6 +20,7 @@
     "sourceMap": true,
     "strict": false,
     "target": "es2020",
-    "rootDir": "src"
+    "rootDir": "src",
+    "typeRoots": ["node_modules/@types"]
   }
 }
