--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -57,11 +57,11 @@
     "@tekclaw/scaffold": "*",
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.4.0",
-    "@types/node": "^17.0.20",
+    "@types/node": "latest",
     "@types/source-map-support": "^0.5.6",
     "@vitest/coverage-c8": "0.32.0",
     "c8": "^8.0.0",
-    "typescript": "^5.1.3",
+    "typescript": "latest",
     "unplugin-auto-import": "0.16.4",
     "vitest": "0.32.0"
   }
