--- a/packages/vix-electron/package.json
+++ b/packages/vix-electron/package.json
@@ -14,11 +14,6 @@
     "public",
     "src"
   ],
-  "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json -w",
-    "lint": "eslint ./src"
-  },
   "keywords": [
     "vite-plugin",
     "vite",
@@ -26,20 +21,18 @@
     "electron-builder"
   ],
   "devDependencies": {
-    "@types/node": "^17.0.20",
-    "electron": "^23.1.1",
-    "electron-builder": "^23.6.0",
+    "@types/node": "latest",
+    "electron": "^25.1.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.8.3",
-    "vite": "^4.1.1"
+    "typescript": "latest"
   },
   "dependencies": {
-    "@tekclaw/scaffold": "^1.0.2",
-    "@tekclaw/vix-utils": "^1.0.2",
     "builtin-modules": "^3.3.0",
     "deepmerge": "^4.3.0",
+    "electron-builder": "^24.4.0",
     "electron-devtools-installer": "^3.2.0",
-    "esbuild": "^0.17.8",
-    "fs-extra": "^11.1.0"
+    "esbuild": "^0.18.4",
+    "fs-extra": "^11.1.0",
+    "vite": "latest"
   }
 }
