--- a/packages/vix-utils/package.json
+++ b/packages/vix-utils/package.json
@@ -29,12 +29,14 @@
   "dependencies": {
     "@tekclaw/scaffold": "^1.0.2",
     "chalk": "^4.1.2",
-    "deepmerge": "^4.2.2"
+    "deepmerge": "^4.2.2",
+    "vite": "latest"
   },
   "devDependencies": {
-    "@types/node": "^16.10.3",
-    "typescript": "^4.8.3",
-    "vite": "^2.6.7"
+    "@types/node": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^4"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
