--- a/packages/vix-yaml/package.json
+++ b/packages/vix-yaml/package.json
@@ -7,13 +7,15 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@rollup/pluginutils": "^3.1.0",
-    "@types/js-yaml": "^4.0.5",
-    "@types/node": "^17.0.20",
+  "dependencies": {
     "esprima": "^4.0.1",
     "js-yaml": "^4.1.0",
-    "tosource": "^2.0.0-alpha.3"
+    "tosource": "^2.0.0-alpha.3",
+    "@rollup/pluginutils": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "latest"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
