--- a/packages/vix-utils/package.json
+++ b/packages/vix-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekclaw/vix-utils",
-  "version": "1.0.2",
+  "version": "1.0.13",
   "description": "",
   "main": "dist",
   "typings": "./src/index.ts",
@@ -27,7 +27,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@tekclaw/scaffold": "^1.0.2",
+    "@tekclaw/scaffold": "1.0.13",
     "chalk": "^4.1.2",
     "deepmerge": "^4.2.2",
     "vite": "latest"
