--- a/packages/vix-yaml/package.json
+++ b/packages/vix-yaml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekclaw/vix-yaml",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "",
   "main": "dist/index.js",
   "types": "src/index.ts",
@@ -8,10 +8,10 @@
     "access": "public"
   },
   "dependencies": {
+    "@rollup/pluginutils": "^3.1.0",
     "esprima": "^4.0.1",
     "js-yaml": "^4.1.0",
-    "tosource": "^2.0.0-alpha.3",
-    "@rollup/pluginutils": "^3.1.0"
+    "tosource": "^2.0.0-alpha.3"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
