--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "npm-run-all": "4.1.5"
   },
   "scripts": {
-    "build": "npm run clean:dist && tsc -b -f -v",
+    "build": "npm run clean:dist && tsc -b -f -v && npm run setup",
     "watch": "tsc -b -w",
-    "setup": "npm run build && node packages/vix-core/dist/install",
+    "setup": "node packages/vix-core/dist/install",
     "clean:dist": "rm -rf packages/**/dist",
     "clean": "rm -rf node_modules && lerna clean -y",
     "bootstrap": "npm run clean && lerna bootstrap",
     "lint": "npm run lint -ws",
-    "postinstall": "npm run build && node packages/vix-core/dist/install"
+    "postinstall": "npm run build"
   },
   "workspaces": [
     "packages/*"
