--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm-run-all": "4.1.5"
   },
   "scripts": {
-    "build": "npm run clean:dist && tsc -b -f -v && npm run setup",
+    "build": "rm -rf packages/*/{lib,esm,dist} && lerna run build && npm run setup",
     "watch": "tsc -b -w",
     "setup": "node packages/vix-core/dist/install",
     "clean:dist": "rm -rf packages/**/dist",
