--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -17,7 +17,9 @@
     "src"
   ],
   "scripts": {
-    "build": "tsc --build --force",
+    "build": "rm -rf lib esm dist && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --build --force",
+    "build:esm": "tsc --module es2015 --outDir esm",
     "watch": "tsc -w",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -29,6 +31,8 @@
   "license": "ISC",
   "dependencies": {
     "@luckycatfactory/esbuild-graphql-loader": "^3.7.0",
+    "@mdx-js/rollup": "^2.3.0",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-graphql": "^2.0.3",
     "@rollup/plugin-yaml": "^4.1.0",
     "@vitejs/plugin-react": "^4.0.0",
