--- a/packages/vix-electron/package.json
+++ b/packages/vix-electron/package.json
@@ -7,6 +7,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "build": "rm -rf lib esm dist && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --build --force",
+    "build:esm": "tsc --module es2015 --outDir esm"
+  },
   "files": [
     "dist",
     "inject",
