--- a/packages/vix-utils/package.json
+++ b/packages/vix-utils/package.json
@@ -39,7 +39,9 @@
     "typescript": "^4"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "rm -rf lib esm dist && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --build --force",
+    "build:esm": "tsc --module es2015 --outDir esm",
     "watch": "tsc -p tsconfig.json -w",
     "lint": "eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
