--- a/packages/vix-yaml/package.json
+++ b/packages/vix-yaml/package.json
@@ -18,7 +18,9 @@
     "@types/node": "latest"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "rm -rf lib esm dist && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --build --force",
+    "build:esm": "tsc --module es2015 --outDir esm",
     "watch": "tsc -p tsconfig.json -w",
     "lint": "eslint ./src"
   },
