--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -17,9 +17,10 @@
     "src"
   ],
   "scripts": {
-    "build": "rm -rf lib esm dist && npm run build:cjs && npm run build:esm",
+    "build": "rm -rf lib esm dist && npm run build:deps && npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc --build --force",
     "build:esm": "tsc --module es2015 --outDir esm",
+    "build:deps": "esbuild ../../node_modules/@mdx-js/**/*.js --target=es2020 --platform=node --bundle --outdir=node_modules/@mdx-js",
     "watch": "tsc -w",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -30,9 +31,9 @@
   "author": "Joey.Etamity",
   "license": "ISC",
   "dependencies": {
-    "@luckycatfactory/esbuild-graphql-loader": "^3.7.0",
     "@mdx-js/rollup": "^2.3.0",
     "@rollup/plugin-babel": "^6.0.3",
+    "@luckycatfactory/esbuild-graphql-loader": "^3.7.0",
     "@rollup/plugin-graphql": "^2.0.3",
     "@rollup/plugin-yaml": "^4.1.0",
     "@vitejs/plugin-react": "^4.0.0",
