--- a/packages/vix-core/package.json
+++ b/packages/vix-core/package.json
@@ -20,7 +20,7 @@
     "build": "rm -rf lib esm dist && npm run build:deps && npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc --build --force",
     "build:esm": "tsc --module es2015 --outDir esm",
-    "build:deps": "esbuild ../../node_modules/@mdx-js/**/*.js --target=es2020 --platform=node --bundle --outdir=node_modules/@mdx-js",
+    "build:deps": "esbuild ../../node_modules/@mdx-js/**/*.js --target=es2020 --platform=node --bundle --outdir=dist/node_modules/@mdx-js",
     "watch": "tsc -w",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
