--- a/packages/vix-yaml/package.json
+++ b/packages/vix-yaml/package.json
@@ -11,7 +11,8 @@
     "@rollup/pluginutils": "^3.1.0",
     "esprima": "^4.0.1",
     "js-yaml": "^4.1.0",
-    "tosource": "^2.0.0-alpha.3"
+    "tosource": "^2.0.0-alpha.3",
+    "xregexp": "^5.1.1"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
