--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "setup": "node packages/vix-core/dist/install",
     "clean:dist": "rm -rf packages/**/dist",
     "clean": "rm -rf node_modules && npx lerna clean -y",
-    "bootstrap": "npm run clean && npx lerna bootstrap",
+    "bootstrap": "npm run clean && npx lerna init",
     "lint": "npm run lint -ws",
     "postinstall": "npm run build"
   },
