--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekclaw/scaffold",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "scripts": {
     "build": "echo \"no build script\"",
     "watch": "echo \"no watch script\"",
@@ -30,5 +30,6 @@
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
     "stylelint-config-idiomatic-order": "^8.1.0"
-  }
+  },
+  "gitHead": "ec70e62fe875ebc21d423ac9bd01fa6efd9a769b"
 }
