--- a/packages/vix-yaml/package.json
+++ b/packages/vix-yaml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekclaw/vix-yaml",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "description": "",
   "main": "dist/index.js",
   "types": "src/index.ts",
@@ -26,5 +26,6 @@
     "lint": "eslint ./src"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "ec70e62fe875ebc21d423ac9bd01fa6efd9a769b"
 }
