--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "concurrently": "^6.3.0",
     "lerna": "^6.4.1",
-    "npm-run-all": "4.1.5"
+    "npm-run-all": "4.1.5",
+    "rollup": "^4.36.0"
   },
   "scripts": {
     "build": "rm -rf packages/*/{lib,esm,dist} && lerna run build && npm run setup",
